# server

./: .env  Cargo.toml  README.md  bacon.toml
bruno/: bruno.json
res/: common.css
src/: main.rs  router.rs  state.rs
src/auth/: login.rs  mod.rs  signup.rs
src/db/: init.sh
src/db/migrations/: 00_basic.sql
src/errors/: mod.rs
src/models/: allocated_user.rs  authenticated_user_record.rs  mod.rs  user.rs
src/templates/: layout.html
src/templates/auth/: signup.html
text/: about.md
