[package]
name = "hrefsurf-server"
description = "Server for the open web directory. Currently unstable."
version = "0.0.1-indev+001"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
axum = "0.8.1"
axum-extra = "0.10.0"
axum-macros = "0.5.0"
chrono = { version = "0.4.39", features = ["alloc", "std", "clock", "now", "wasmbind", "serde"] }
clap = { version = "4.5.28", features = [ "derive", "env" ] }
clap_derive = "4.5.28"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics" ]}

[features]
default = []
serve_resources = []
devel = ["serve_resources"]
